--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lycrex-tool"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2024"
 description = "Lycrex Tool"
 license = "MIT"
@@ -14,9 +14,11 @@ windows = { version = "0.52", features = [
     "Win32_System_Diagnostics_Debug",
     "Win32_Foundation",
     "Win32_System_Threading",
-    "Win32_System_Diagnostics_ToolHelp"
+    "Win32_System_Diagnostics_ToolHelp",
+    "Win32_Graphics_Gdi",
+    "Win32_UI_WindowsAndMessaging"
 ], optional = true }
 
 [features]
-default = []
+default = ["windows"]
 win-memory = ["windows"]
