--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,16 @@ windows = { version = "0.52", features = [
     "Win32_System_Threading",
     "Win32_System_Diagnostics_ToolHelp",
     "Win32_Graphics_Gdi",
-    "Win32_UI_WindowsAndMessaging"
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_System_SystemInformation",
+    "Win32_Security"
 ], optional = true }
 colored = "3.0.0"
+sysinfo = "0.36.1"
+
+# Unix系统相关依赖
+[target.'cfg(unix)'.dependencies]
+libc = "0.2"
 
 [features]
 default = ["windows"]
