--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,8 @@ windows = { version = "0.61", features = [
 ]}
 colored = "3.0.0"
 sysinfo = "0.36.1"
+regex = "1.11.2"
+serde_json = "1.0.143"
 
 # Unix系统相关依赖
 [target.'cfg(unix)'.dependencies]
