--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lycrex-tool"
-version = "0.1.3-rc1"
+version = "0.1.3-rc2"
 edition = "2021"
 description = "Lycrex Tool"
 license = "MIT"
@@ -11,6 +11,13 @@ keywords = ["lycrex"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+colored = "3.0.0"
+sysinfo = "0.36.1"
+regex = "1.11.2"
+serde_json = "1.0.143"
+
+# Windows系统相关依赖
+[target.'cfg(windows)'.dependencies]
 windows = { version = "0.61", features = [
     "Win32_System_Diagnostics_Debug",
     "Win32_Foundation",
@@ -22,10 +29,6 @@ windows = { version = "0.61", features = [
     "Win32_System_ProcessStatus",
     "Win32_Security"
 ]}
-colored = "3.0.0"
-sysinfo = "0.36.1"
-regex = "1.11.2"
-serde_json = "1.0.143"
 
 # Unix系统相关依赖
 [target.'cfg(unix)'.dependencies]
